// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Multisig with Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "GrXk6MkjG6SZpxGxtk3t6v7gCaDRxYJaggYFrPXgADhfL51",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "FqMrzbiRrHF86sGYu6bj48Y5YdHN9KX74wSVtJpYd355MfR",
      "callHash": "(hash)",
      "multisig": "GrXk6MkjG6SZpxGxtk3t6v7gCaDRxYJaggYFrPXgADhfL51",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "EVVZwFsbXSZDoJW6C8LS9gDAwp3pfyDqz7NBz6X7z3hDjbE",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "GQMpQ4h2NkdGKDv6yZewBtXnB4C5S6uyEkU6mAu3JDzqFuT",
      "callHash": "(hash)",
      "multisig": "EVVZwFsbXSZDoJW6C8LS9gDAwp3pfyDqz7NBz6X7z3hDjbE",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "GZsCB517daRGtBmuWFP2TBgVatQjjvn5Qzgm3vWMREiwAWg",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Kusama Multisig with Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "CjXitWN9cnQHFPTkpnCxr99m3JkWzw1v1bVZdSoekxwczg3",
      "callHash": "(hash)",
      "multisig": "ChsWgRUSD8V8KhAV957VuBhRPMtoFsq3zhJSNLQrNdREJdy",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
